# python-training

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  README.md  cloudrun.yaml  setup.sh
docs/superpowers/plans/: 2026-05-25-plan-a-foundation-bootstrap.md  2026-05-28-plan-b-slides-build-deploy.md  2026-05-29-plan-c-lesson-01-hello.md  2026-05-29-plan-d-lesson-02-variables.md
docs/superpowers/specs/: 2026-05-25-python-course-design.md  2026-05-29-lesson-01-hello-design.md  2026-05-29-lesson-02-variables-design.md
lessons/01-hello/: README.md  pyproject.toml
lessons/01-hello/exercises/: hello.py  test_hello.py
lessons/01-hello/slides/: index.html  slides.md
lessons/01-hello/solutions/: hello.py  test_hello.py
shared/reveal/: VERSION
shared/reveal/theme/: python-training.css
tools/build_index/: pyproject.toml
tools/build_index/src/build_index/: __init__.py  __main__.py  builder.py  catalog.py  template.py
tools/build_index/tests/: test_builder.py  test_catalog.py
tools/new_lesson/: pyproject.toml
tools/new_lesson/src/new_lesson/: __init__.py  __main__.py  scaffold.py
tools/new_lesson/src/new_lesson/template/: README.md.tmpl  pyproject.toml.tmpl
tools/new_lesson/src/new_lesson/template/exercises/: main.py.tmpl  test_main.py.tmpl
tools/new_lesson/src/new_lesson/template/slides/: index.html.tmpl  slides.md.tmpl
tools/new_lesson/template/: pyproject.toml.tmpl
tools/new_lesson/template/solutions/: main.py.tmpl  test_main.py.tmpl
tools/new_lesson/tests/: test_scaffold.py
tools/slides_dev/: pyproject.toml
tools/slides_dev/src/slides_dev/: __init__.py  __main__.py  server.py
tools/slides_dev/tests/: test_server.py
