[project]
name = "python-training"
version = "0.0.0"
description = "A Python programming course delivered as code + per-lesson reveal.js slide decks"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["lessons/*", "tools/*"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# template.py holds the landing page as embedded HTML/CSS string constants;
# line length doesn't apply to that content.
"tools/build_index/src/build_index/template.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["lessons/", ".venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
