[project]
name = "new-lesson"
version = "0.0.0"
description = "Scaffold a new python-training lesson from the template tree"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_lesson"]
exclude = ["src/new_lesson/template"]

[tool.hatch.build.targets.wheel.force-include]
"template" = "new_lesson/template"
